--- a/WikiGame/app/build.gradle
+++ b/WikiGame/app/build.gradle
@@ -27,15 +27,27 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    // FireBase
+    // FireBase Analytics
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     // Autentificacion FireBase
     implementation 'com.google.firebase:firebase-auth:19.1.0'
+    // Database Firebase
+    implementation 'com.google.firebase:firebase-database:19.1.0'
+    //
+    implementation 'com.firebaseui:firebase-ui-database:4.3.2'
     // Almacenamiento Firebase
     implementation 'com.google.firebase:firebase-storage:19.1.0'
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.navigation:navigation-fragment:2.2.2'
+    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
