--- a/WikiGame/app/build.gradle
+++ b/WikiGame/app/build.gradle
@@ -12,6 +12,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        multiDexEnabled true
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -27,13 +29,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    // Anuncios
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'
+    implementation 'com.android.support:multidex:1.0.3'
+
     // FireBase Analytics
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     // Autentificacion FireBase
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     // Database Firebase
     implementation 'com.google.firebase:firebase-database:19.1.0'
-    //
+    // Firebase ui
     implementation 'com.firebaseui:firebase-ui-database:4.3.2'
     // Almacenamiento Firebase
     implementation 'com.google.firebase:firebase-storage:19.1.0'
