--- a/WikiGame/app/src/main/AndroidManifest.xml
+++ b/WikiGame/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-7784871729860067~4134431061"/>
+
         <activity android:name=".Activities.GameDetailActivity"></activity>
         <activity
             android:name=".Activities.HomeActivity"
